--- a/src/views/Invoice.fxml
+++ b/src/views/Invoice.fxml
@@ -6,7 +6,6 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -32,6 +31,8 @@
                           </columnConstraints>
                           <rowConstraints>
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
                               <Label text="Week  Starting">
@@ -45,6 +46,36 @@
                                  </GridPane.margin>
                               </Button>
                               <DatePicker fx:id="datePickerStartDate" prefHeight="25.0" prefWidth="311.0" GridPane.columnIndex="1" />
+                              <Label fx:id="labelClient" text="None" GridPane.rowIndex="1">
+                                 <GridPane.margin>
+                                    <Insets left="150.0" />
+                                 </GridPane.margin>
+                              </Label>
+                              <Label text="None" GridPane.rowIndex="2">
+                                 <GridPane.margin>
+                                    <Insets left="150.0" />
+                                 </GridPane.margin>
+                              </Label>
+                              <Label fx:id="labelDate" text="None" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                                 <GridPane.margin>
+                                    <Insets left="100.0" />
+                                 </GridPane.margin>
+                              </Label>
+                              <Label text="Client:" GridPane.rowIndex="1">
+                                 <GridPane.margin>
+                                    <Insets left="20.0" />
+                                 </GridPane.margin>
+                              </Label>
+                              <Label fx:id="labelAddress" text="Address:" GridPane.rowIndex="2">
+                                 <GridPane.margin>
+                                    <Insets left="20.0" />
+                                 </GridPane.margin>
+                              </Label>
+                              <Label text="Date:" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                                 <GridPane.margin>
+                                    <Insets left="20.0" />
+                                 </GridPane.margin>
+                              </Label>
                            </children>
                            <padding>
                               <Insets bottom="20.0" top="20.0" />
@@ -64,17 +95,49 @@
                <bottom>
                   <HBox alignment="TOP_CENTER" prefHeight="74.0" prefWidth="665.0" BorderPane.alignment="CENTER">
                      <children>
-                        <Button fx:id="btnCreateInvoice" mnemonicParsing="false" text="Create Invoice">
+                        <GridPane prefHeight="74.0" prefWidth="590.0">
+                          <columnConstraints>
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                            <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                          </columnConstraints>
+                          <rowConstraints>
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                          </rowConstraints>
+                           <children>
+                              <Button fx:id="btnCancel" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Cancel" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                 <GridPane.margin>
+                                    <Insets left="55.0" />
+                                 </GridPane.margin>
+                              </Button>
+                              <Button fx:id="btnCreateInvoice" mnemonicParsing="false" text="Create Invoice" GridPane.rowIndex="1">
+                                 <GridPane.margin>
+                                    <Insets left="36.0" />
+                                 </GridPane.margin>
+                              </Button>
+                              <Button fx:id="btnPrevious" mnemonicParsing="false" text="Previous">
+                                 <GridPane.margin>
+                                    <Insets left="52.0" />
+                                 </GridPane.margin>
+                              </Button>
+                              <Button fx:id="btnNext" mnemonicParsing="false" text="Next" GridPane.columnIndex="1">
+                                 <GridPane.margin>
+                                    <Insets left="60.0" />
+                                 </GridPane.margin>
+                              </Button>
+                              <Label fx:id="labelTotal" text="\$0.00" GridPane.columnIndex="3">
+                                 <GridPane.margin>
+                                    <Insets left="100.0" />
+                                 </GridPane.margin>
+                              </Label>
+                              <Label text="Total:" GridPane.columnIndex="3" />
+                           </children>
                            <HBox.margin>
-                              <Insets top="20.0" />
+                              <Insets left="275.0" />
                            </HBox.margin>
-                        </Button>
-                        <ImageView fitHeight="94.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-                        <Button fx:id="btnCancel" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Cancel">
-                           <HBox.margin>
-                              <Insets top="20.0" />
-                           </HBox.margin>
-                        </Button>
+                        </GridPane>
                      </children>
                   </HBox>
                </bottom>
