--- a/src/views/Main.fxml
+++ b/src/views/Main.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -8,8 +9,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-
-<AnchorPane prefHeight="577.0" prefWidth="665.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.102">
+<AnchorPane prefHeight="577.0" prefWidth="665.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -24,9 +24,15 @@
             </TableView>
             <HBox alignment="TOP_CENTER" prefHeight="74.0" prefWidth="665.0">
                <children>
-                  <Button mnemonicParsing="false" text="View Ticket" />
+                  <Button mnemonicParsing="false" text="View Ticket">
+                     <HBox.margin>
+                        <Insets top="10.0" />
+                     </HBox.margin></Button>
                   <ImageView fitHeight="94.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Assign Courier" />
+                  <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Assign Courier">
+                     <HBox.margin>
+                        <Insets top="10.0" />
+                     </HBox.margin></Button>
                </children>
             </HBox>
          </children>
