--- a/src/views/Invoice.fxml
+++ b/src/views/Invoice.fxml
@@ -51,7 +51,7 @@
                                     <Insets left="150.0" />
                                  </GridPane.margin>
                               </Label>
-                              <Label text="None" GridPane.rowIndex="2">
+                              <Label fx:id="labelAddress" text="None" GridPane.rowIndex="2">
                                  <GridPane.margin>
                                     <Insets left="150.0" />
                                  </GridPane.margin>
@@ -66,7 +66,7 @@
                                     <Insets left="20.0" />
                                  </GridPane.margin>
                               </Label>
-                              <Label fx:id="labelAddress" text="Address:" GridPane.rowIndex="2">
+                              <Label text="Address:" GridPane.rowIndex="2">
                                  <GridPane.margin>
                                     <Insets left="20.0" />
                                  </GridPane.margin>
@@ -95,10 +95,11 @@
                <bottom>
                   <HBox alignment="TOP_CENTER" prefHeight="74.0" prefWidth="665.0" BorderPane.alignment="CENTER">
                      <children>
-                        <GridPane prefHeight="74.0" prefWidth="590.0">
+                        <GridPane alignment="CENTER" prefHeight="72.0" prefWidth="632.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                             <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                               <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                           </columnConstraints>
@@ -107,36 +108,44 @@
                             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                           </rowConstraints>
                            <children>
-                              <Button fx:id="btnCancel" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Cancel" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                              <Button fx:id="btnCancel" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Cancel" GridPane.columnIndex="2" GridPane.rowIndex="1">
                                  <GridPane.margin>
-                                    <Insets left="55.0" />
+                                    <Insets left="24.0" />
                                  </GridPane.margin>
                               </Button>
                               <Button fx:id="btnCreateInvoice" mnemonicParsing="false" text="Create Invoice" GridPane.rowIndex="1">
                                  <GridPane.margin>
-                                    <Insets left="36.0" />
+                                    <Insets left="10.0" />
                                  </GridPane.margin>
                               </Button>
                               <Button fx:id="btnPrevious" mnemonicParsing="false" text="Previous">
                                  <GridPane.margin>
-                                    <Insets left="52.0" />
+                                    <Insets left="32.0" />
                                  </GridPane.margin>
                               </Button>
-                              <Button fx:id="btnNext" mnemonicParsing="false" text="Next" GridPane.columnIndex="1">
+                              <Button fx:id="btnNext" mnemonicParsing="false" text="Next" GridPane.columnIndex="2">
+                                 <GridPane.margin>
+                                    <Insets left="30.0" />
+                                 </GridPane.margin>
+                              </Button>
+                              <Label fx:id="labelTotal" text="\$0.00" GridPane.columnIndex="4">
                                  <GridPane.margin>
                                     <Insets left="60.0" />
                                  </GridPane.margin>
-                              </Button>
-                              <Label fx:id="labelTotal" text="\$0.00" GridPane.columnIndex="3">
+                              </Label>
+                              <Label text="Total:" GridPane.columnIndex="4" />
+                              <Label fx:id="labelClientCounter" alignment="CENTER" text="Client 1 of 1" GridPane.columnIndex="1">
                                  <GridPane.margin>
-                                    <Insets left="100.0" />
+                                    <Insets left="20.0" />
                                  </GridPane.margin>
                               </Label>
-                              <Label text="Total:" GridPane.columnIndex="3" />
                            </children>
                            <HBox.margin>
                               <Insets left="275.0" />
                            </HBox.margin>
+                           <padding>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </padding>
                         </GridPane>
                      </children>
                   </HBox>
