--- a/src/views/ClientDeliveryReport.fxml
+++ b/src/views/ClientDeliveryReport.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
-<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -18,8 +18,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <AnchorPane layoutX="10.0" layoutY="10.0">
          <children>
@@ -68,8 +67,11 @@
                                              <padding>
                                                 <Insets left="200.0" />
                                              </padding>
+                                             <toggleGroup>
+                                                <ToggleGroup fx:id="reportingTimeFrame" />
+                                             </toggleGroup>
                                           </RadioButton>
-                                          <RadioButton fx:id="radioButtonWeek" mnemonicParsing="false" text="Week" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                          <RadioButton fx:id="radioButtonWeek" mnemonicParsing="false" selected="true" text="Week" toggleGroup="$reportingTimeFrame" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                              <GridPane.margin>
                                                 <Insets left="20.0" />
                                              </GridPane.margin>
@@ -134,17 +136,37 @@
                            <bottom>
                               <HBox alignment="TOP_CENTER" prefHeight="74.0" prefWidth="665.0" BorderPane.alignment="CENTER">
                                  <children>
-                                    <Button fx:id="btnCreateReport" mnemonicParsing="false" text="Create Report">
-                                       <HBox.margin>
-                                          <Insets top="20.0" />
-                                       </HBox.margin>
-                                    </Button>
-                                    <ImageView fitHeight="94.0" fitWidth="200.0" pickOnBounds="true" preserveRatio="true" />
-                                    <Button fx:id="btnCancel" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Cancel">
-                                       <HBox.margin>
-                                          <Insets top="20.0" />
-                                       </HBox.margin>
-                                    </Button>
+                                    <GridPane prefHeight="74.0" prefWidth="275.0">
+                                       <columnConstraints>
+                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                       </columnConstraints>
+                                       <rowConstraints>
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                       </rowConstraints>
+                                       <children>
+                                          <Button fx:id="btnPrevious" mnemonicParsing="false" text="Previous">
+                                             <GridPane.margin>
+                                                <Insets left="13.0" />
+                                             </GridPane.margin>
+                                          </Button>
+                                          <Button fx:id="btnNext" mnemonicParsing="false" text="Next" GridPane.columnIndex="1">
+                                             <GridPane.margin>
+                                                <Insets left="50.0" />
+                                             </GridPane.margin>
+                                          </Button>
+                                          <Button fx:id="btnCancel" alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" text="Cancel" GridPane.columnIndex="1" GridPane.rowIndex="1">
+                                             <GridPane.margin>
+                                                <Insets left="45.0" />
+                                             </GridPane.margin>
+                                          </Button>
+                                          <Button fx:id="btnCreateReport" mnemonicParsing="false" text="Create Report" GridPane.rowIndex="1" />
+                                       </children>
+                                       <padding>
+                                          <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                                       </padding>
+                                    </GridPane>
                                  </children>
                               </HBox>
                            </bottom>
