--- a/src/views/ClientDeliveryReport.fxml
+++ b/src/views/ClientDeliveryReport.fxml
@@ -2,8 +2,8 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TableColumn?>
@@ -19,6 +19,7 @@
 <?import javafx.scene.text.Font?>
 
 <AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ClientDeliveryReport">
    <children>
       <AnchorPane layoutX="10.0" layoutY="10.0">
          <children>
@@ -57,7 +58,6 @@
                                              </GridPane.margin>
                                           </Button>
                                           <ComboBox fx:id="comboBoxClient" prefHeight="25.0" prefWidth="300.0" GridPane.columnIndex="1" />
-                                          <ChoiceBox fx:id="comboBoxStarting" prefHeight="25.0" prefWidth="293.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                           <Label text="Starting" GridPane.rowIndex="2">
                                              <GridPane.margin>
                                                 <Insets left="70.0" />
@@ -76,7 +76,7 @@
                                                 <Insets left="20.0" />
                                              </GridPane.margin>
                                           </RadioButton>
-                                          <Label fx:id="labelClientName" text="None" GridPane.rowIndex="3">
+                                          <Label fx:id="labelClient" text="None" GridPane.rowIndex="3">
                                              <padding>
                                                 <Insets left="150.0" />
                                              </padding>
@@ -121,7 +121,7 @@
                                           <Insets bottom="20.0" top="20.0" />
                                        </padding>
                                     </GridPane>
-                                    <TableView prefHeight="367.0" prefWidth="665.0">
+                                    <TableView fx:id="tableReport" prefHeight="367.0" prefWidth="665.0">
                                        <columns>
                                           <TableColumn fx:id="tableColumnOrderDate" prefWidth="139.60000610351562" text="Order Date" />
                                           <TableColumn fx:id="tableColumnPickupClient" prefWidth="154.39999389648438" text="Pickup Client" />
